# MatLib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Readme.md  Reference.txt  ToDo.txt  configure
docs/: Installation.md  Makefile-template  Usage.md  getting-started.md  installation.md
examples/: Makefile  README.md
examples/0_basic/: Makefile  Readme.md  main.cpp
examples/1_tester/: Makefile  MatrixTester.cpp  MatrixTester.h  Readme.md  RunningUnit.cpp  main.cpp
examples/1_timer/: Makefile  Readme.md  main.cpp
examples/2_tester/: Makefile  MatrixTester.h  Readme.md  RunningUnit.cpp  main.cpp
include/: Layer.h  LossFunction.h  Matrix.h  MatrixTester.h  Matrix_CUDA.cuh  ModelInterface.h  Optimizer.h  Tensor.h
include/MatLib/: CPUMatrix.h  GPUMatrix.cuh  Matrix.h
include/gpumatrix/: CPUMatrix.h  GPUMatrix.cuh
report/: kernelAdd.ncu-rep
src/: CMakeLists.txt  CPUMatrix.cpp  ConvLayer.cpp  DenseLayer.cpp  GPUMatrix.cu  Matrix.cpp  MatrixTester.cpp  Matrix_CUDA.cu  ReLULayer.cpp  RunningUnit.cpp  main.cpp  main.cu
tests/: cpu_matrix_advanced_operation_test.cpp  cpu_matrix_basic_operation_test.cpp  cpu_matrix_creation_test.cpp  gpu_matrix_advanced_operation_test.cu  gpu_matrix_basic_operation_test.cpp  gpu_matrix_basic_operation_test.cu  gpu_matrix_creation_test.cu
